RESOLVED FIXED164155
[CSS Parser] Fix font-family parsing inside @font-face
https://bugs.webkit.org/show_bug.cgi?id=164155
Summary [CSS Parser] Fix font-family parsing inside @font-face
Dave Hyatt
Reported 2016-10-28 15:13:10 PDT
[CSS Parser] Fix font-family parsing inside @font-face
Attachments
Patch (1.33 KB, patch)
2016-10-28 15:13 PDT, Dave Hyatt
simon.fraser: review+
Dave Hyatt
Comment 1 2016-10-28 15:13:58 PDT
Simon Fraser (smfr)
Comment 2 2016-10-28 15:20:13 PDT
Comment on attachment 293228 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=293228&action=review > Source/WebCore/ChangeLog:7 > + Reviewed by NOBODY (OOPS!). > + Maybe say why this is different from blink
Dave Hyatt
Comment 3 2016-10-28 15:22:13 PDT
Fixed in r208076.
Note You need to log in before you can comment on or make changes to this bug.