[CSS Parser] Fix font-family parsing inside @font-face https://bugs.webkit.org/show_bug.cgi?id=164155

Reviewed by Simon Fraser.

* css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::parseFontFaceDescriptor):
Use the full font-family parsing that returns a CSSValueList,
since we can handle multiple families.



Canonical link: https://commits.webkit.org/181861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208076 268f45cc-cd09-0410-ab3c-d52691b4dbfc